// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: right;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
</div>
`;

exports[`Text as 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`Text color 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: light-0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #ffaa00;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
</div>
`;

exports[`Text css 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
  background-color: #000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c0"
  />
</div>
`;

exports[`Text decoration 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: overline;
  text-decoration: overline;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
</div>
`;

exports[`Text default 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
</div>
`;

exports[`Text italic 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: italic;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
</div>
`;

exports[`Text margin 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xs;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: initial;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xsrem 0 0 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 xsrem 0 0;
  padding: 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 xsrem 0;
  padding: 0;
  color: #000000;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0 xsrem;
  padding: 0;
  color: #000000;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 xsrem 0 xsrem;
  padding: 0;
  color: #000000;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xsrem 0 xsrem 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
  <span
    className="c4"
  />
  <span
    className="c5"
  />
  <span
    className="c6"
  />
  <span
    className="c7"
  />
</div>
`;

exports[`Text margin responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: initial;
  padding: 0;
  color: #000000;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xs;
  padding: 0;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
</div>
`;

exports[`Text nowrap 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <span
    className="c0"
  />
</div>
`;

exports[`Text padding 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: xs;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: initial;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: xsrem 0 0 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0 xsrem 0 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0 0 xsrem 0;
  color: #000000;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0 0 0 xsrem;
  color: #000000;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0 xsrem 0 xsrem;
  color: #000000;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: xsrem 0 xsrem 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
  <span
    className="c4"
  />
  <span
    className="c5"
  />
  <span
    className="c6"
  />
  <span
    className="c7"
  />
</div>
`;

exports[`Text padding responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: initial;
  color: #000000;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: xs;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    padding: lg;
  }
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
</div>
`;

exports[`Text size 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: xs;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
</div>
`;

exports[`Text size responsive 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: xs;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: initial;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: lg;
  }
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
</div>
`;

exports[`Text transform 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: lowercase;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: full-width;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
  <span
    className="c4"
  />
</div>
`;

exports[`Text weight 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: bold;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

<div>
  <span
    className="c0"
  />
  <span
    className="c1"
  />
  <span
    className="c2"
  />
</div>
`;
